dist/1.0/bin/sample/retrieveUnpackaged/objects/Service_Attribute_Set__c.object
<CustomObject>
    <description>Attribute Set Instances; related to Service Bundle, Service Component or Pricing Items</description>
    <fields>
        <fullName>Attribute_Set_Type__c</fullName>
        <description>Lookup to Attribute Set Definition</description>
        <inlineHelpText>Lookup to Attribute Set Definition</inlineHelpText>
        <label>Attribute Set Type</label>
        <referenceTo>Attribute_Set_Type__c</referenceTo>
        <relationshipLabel>Service Attribute Sets</relationshipLabel>
        <relationshipName>Service_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Billing_ID__c</fullName>
        <description>ID of Attribute Set in Billing System</description>
        <inlineHelpText>ID of Attribute Set in Billing System</inlineHelpText>
        <label>Billing ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_ID__c</fullName>
        <description>ID of Attribute Set in CSR Database</description>
        <inlineHelpText>ID of Attribute Set in CSR Database</inlineHelpText>
        <label>CSR ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Bundle__c</fullName>
        <description>Id of Service Bundle, that this Attribute Set belongs to</description>
        <inlineHelpText>Id of Service Bundle, that this Attribute Set belongs to</inlineHelpText>
        <label>Service Bundle</label>
        <referenceTo>ServiceBundle__c</referenceTo>
        <relationshipLabel>Service Attribute Sets</relationshipLabel>
        <relationshipName>Service_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Component__c</fullName>
        <description>Id of Service Component, that this Attribute Set belongs to</description>
        <inlineHelpText>Id of Service Component, that this Attribute Set belongs to</inlineHelpText>
        <label>Service Component</label>
        <referenceTo>ServiceComponent__c</referenceTo>
        <relationshipLabel>Service Attribute Sets</relationshipLabel>
        <relationshipName>Service_Attribute_Sets1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Pricing_Item__c</fullName>
        <description>Id of Service Pricing Item, that this Attribute Set belongs to</description>
        <inlineHelpText>Id of Service Pricing Item, that this Attribute Set belongs to</inlineHelpText>
        <label>Service Pricing Item</label>
        <referenceTo>Service_Pricing_Item__c</referenceTo>
        <relationshipLabel>Service Attribute Sets</relationshipLabel>
        <relationshipName>Service_Attribute_Sets</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Service Attribute Set</label>
    <nameField>
        <label>Service Attribute Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Attribute Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>